Implement SESMessage reader and optional dependencies

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -17,15 +17,13 @@
    },
    "outputs": [],
    "source": [
-    "import email\n",
-    "from email.message import Message\n",
     "from typing import Optional, Dict, Union\n",
     "from lxml.html import HtmlElement\n",
     "from pygrok import Grok\n",
     "import pandas as pd\n",
     "\n",
-    "from mailxtract.html import HTMLExtractor, field, FieldContext\n",
-    "from mailxtract.binary import BinaryExtractor"
+    "from mailxtract.html import LXMLExtractor, field, FieldContext\n",
+    "from mailxtract.binary import SESMessage, BinaryExtractor"
    ]
   },
   {
@@ -65,22 +63,8 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "with open(raw_email_file, mode='rb') as file:\n",
-    "    raw_email: bytes = file.read()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "message: Message = email.message_from_string(raw_email.decode('utf-8'))"
+    "reader = SESMessage.from_file(raw_email_file)\n",
+    "raw_email = BinaryExtractor(reader)"
    ],
    "metadata": {
     "collapsed": false,
@@ -100,13 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "binary_email = BinaryExtractor(message)\n",
-    "\n",
-    "metadata = binary_email.get_header()\n",
-    "html_email = binary_email.get_html()"
+    "metadata = raw_email.get_header()\n",
+    "html_email = raw_email.get_html()"
    ],
    "metadata": {
     "collapsed": false,
@@ -141,10 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "class Job(HTMLExtractor):\n",
+    "class Job(LXMLExtractor):\n",
     "\n",
     "    def __init__(self, html_element: Union[str, HtmlElement], position_category: str):\n",
     "        super().__init__(html_element)\n",
@@ -216,10 +198,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "outputs": [],
    "source": [
-    "class Email(HTMLExtractor):\n",
+    "class Email(LXMLExtractor):\n",
     "\n",
     "    def __init__(self, html_element: Union[str, HtmlElement]):\n",
     "        super().__init__(html_element)\n",
@@ -252,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "email = Email(html_email)"
@@ -266,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "df = pd.DataFrame(email.jobs())"
@@ -280,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
       "text/plain": "  company_city company_country  \\\n0         Gand        Belgique   \n1      Laakdal        Belgique   \n2       Anvers        Belgique   \n3         None            None   \n4      Malines        Belgique   \n5      Malines        Belgique   \n\n                                        company_logo  \\\n0  https://media-exp1.licdn.com/dms/image/C4E0BAQ...   \n1  https://media-exp1.licdn.com/dms/image/C4E0BAQ...   \n2  https://media-exp1.licdn.com/dms/image/C4E0BAQ...   \n3  https://media-exp1.licdn.com/dms/image/C4D0BAQ...   \n4  https://media-exp1.licdn.com/dms/image/C4D0BAQ...   \n5  https://media-exp1.licdn.com/dms/image/C560BAQ...   \n\n                   company_name   company_region position_category  \\\n0                       Bricsys  Region flamande     Data Engineer   \n1              Apollo Solutions  Region flamande     Data Engineer   \n2  Process Automation Solutions  Region flamande     Data Engineer   \n3                 Ossia Belgium             None     Data Engineer   \n4                Ordina Belgium  Region flamande     Data Engineer   \n5                       Exellys  Region flamande     Data Engineer   \n\n                           position_name remote_working_policy  \n0                          Data Engineer               Hybride  \n1                          Data Engineer               Hybride  \n2          MES & Data Historian Engineer              Sur site  \n3                          Data Engineer                  None  \n4             Senior (Big) Data Engineer              Sur site  \n5  Data Warehouse Engineer and BI Expert              Sur site  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>company_city</th>\n      <th>company_country</th>\n      <th>company_logo</th>\n      <th>company_name</th>\n      <th>company_region</th>\n      <th>position_category</th>\n      <th>position_name</th>\n      <th>remote_working_policy</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Gand</td>\n      <td>Belgique</td>\n      <td>https://media-exp1.licdn.com/dms/image/C4E0BAQ...</td>\n      <td>Bricsys</td>\n      <td>Region flamande</td>\n      <td>Data Engineer</td>\n      <td>Data Engineer</td>\n      <td>Hybride</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Laakdal</td>\n      <td>Belgique</td>\n      <td>https://media-exp1.licdn.com/dms/image/C4E0BAQ...</td>\n      <td>Apollo Solutions</td>\n      <td>Region flamande</td>\n      <td>Data Engineer</td>\n      <td>Data Engineer</td>\n      <td>Hybride</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Anvers</td>\n      <td>Belgique</td>\n      <td>https://media-exp1.licdn.com/dms/image/C4E0BAQ...</td>\n      <td>Process Automation Solutions</td>\n      <td>Region flamande</td>\n      <td>Data Engineer</td>\n      <td>MES &amp; Data Historian Engineer</td>\n      <td>Sur site</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>None</td>\n      <td>None</td>\n      <td>https://media-exp1.licdn.com/dms/image/C4D0BAQ...</td>\n      <td>Ossia Belgium</td>\n      <td>None</td>\n      <td>Data Engineer</td>\n      <td>Data Engineer</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Malines</td>\n      <td>Belgique</td>\n      <td>https://media-exp1.licdn.com/dms/image/C4D0BAQ...</td>\n      <td>Ordina Belgium</td>\n      <td>Region flamande</td>\n      <td>Data Engineer</td>\n      <td>Senior (Big) Data Engineer</td>\n      <td>Sur site</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Malines</td>\n      <td>Belgique</td>\n      <td>https://media-exp1.licdn.com/dms/image/C560BAQ...</td>\n      <td>Exellys</td>\n      <td>Region flamande</td>\n      <td>Data Engineer</td>\n      <td>Data Warehouse Engineer and BI Expert</td>\n      <td>Sur site</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
